<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/group"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
	<ImageView
		android:id="@+id/image_preview"
		android:background="@android:color/transparent"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:scaleType="centerInside"/>
		
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
		<Button
			android:id="@+id/button_preferences"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_weight="1" 
			android:text="@string/button_preferences"/>

		<Button
			android:id="@+id/button_image_source"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_weight="1" 
			android:text="@string/button_image_source"/>
			
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
	
		<Button
			android:id="@+id/button_recognize"
			android:layout_width="0dip" 
			android:layout_height="fill_parent"
			android:layout_weight="1" 
			android:text="@string/button_recognize"/>
		
	</LinearLayout>
	
</LinearLayout>
